Replace raw foreign key value in appointments with primary descriptors

--- a/app/views/appointment_templates/index.html.erb
+++ b/app/views/appointment_templates/index.html.erb
@@ -62,7 +62,7 @@
 
         <!-- Display appointment.user_id start -->
         <td>
-          <%= appointment.user_id %>
+          <%= appointment.user.email %>
         </td>
         <!-- Display appointment.user_id end -->
 
